# wikiwwii

./: .gitignore  README.md  azure-pipelines.yml  pyproject.toml
.dvc/: config
tests/: data.dvc  test_collect_battles.py  test_parse.py
wikiwwii/collect/: battles.py  fronts.py
wikiwwii/parse/: __init__.py
