[tool.poetry]
name = "wikiwwii"
version = "0.1.0"
description = "From the book: Learn Python by Building Data Science Applications"
authors = ["Philipp Kats <casyfill@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
pandas = "^1.2.3"
dvc = "^2.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.11.1"
pytest-azurepipelines = {version = "^0.8.0", extras = ["azure"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
